force-app/main/default/objects/SyncedRecordSnapshot__c/SyncedRecordSnapshot__c.object-meta.xml
<CustomObject>
    <description>Stores the last known good state of synced records for conflict detection</description>
    <label>Synced Record Snapshot</label>
    <nameField>
        <displayFormat>Snapshot-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Synced Record Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>