force-app/main/default/objects/SyncedRecordSnapshot__c/fields/LastSyncedAt__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedAt__c</fullName>
    <description>Timestamp of the last successful sync</description>
    <label>Last Synced At</label>
    <type>DateTime</type>
</CustomField>