force-app/main/default/objects/SyncedRecordSnapshot__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for the record being synced</description>
    <externalId>true</externalId>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>