force-app/main/default/objects/SyncedRecordSnapshot__c/fields/SnapshotJSON__c.field-meta.xml
<CustomField>
    <fullName>SnapshotJSON__c</fullName>
    <description>JSON object containing the field to value state of the last successful sync</description>
    <label>Snapshot JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>