force-app/main/default/objects/SyncedRecordSnapshot__c/fields/SnapshotVersion__c.field-meta.xml
<CustomField>
    <fullName>SnapshotVersion__c</fullName>
    <description>Monotonic counter tracking snapshot iterations</description>
    <label>Snapshot Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>